fixed missing XML/Base64 decoder dependency