@@ -39,6 +39,7 @@ import java.util.Map;
 
 import javax.imageio.ImageIO;
 //import javax.xml.bind.DatatypeConverter;
+import java.util.Base64.Encoder;
 
 /**
  * <code>Graphics2D</code> implementation that saves all operations to a string
@@ -361,8 +362,9 @@ public class SVGGraphics2D extends VectorGraphics2D {
 		} catch (IOException e) {
 			return "";
 		}
-		String dataBase64 = DatatypeConverter
-			.printBase64Binary(data.toByteArray());
+		/*String dataBase64 = DatatypeConverter
+			.printBase64Binary(data.toByteArray());*/
+		String dataBase64 =	java.util.Base64.getEncoder().encodeToString(data.toByteArray());
 		return "data:image/png;base64," + dataBase64;
 	}
 
